[package]
name = "amm-proxy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_proxy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
amm-anchor = { git = "https://github.com/raydium-io/raydium-contract-instructions", package = "amm-anchor", branch = "example", features = ["devnet"]}
solana-program = "=1.18.7"
anchor-spl = "0.29.0"
